sfdx-source/force-app/main/default/objects/SBQQ__Subscription__c/fields/Split_Category__c.field-meta.xml
<CustomField>
    <fullName>Split_Category__c</fullName>
    <description>LEM-14231: Indicates if the associated product(s) is Marketplace (Core) or Ads &amp; Promo</description>
    <inlineHelpText>Indicates if the associated product(s) is Marketplace (Core) or Ads &amp; Promo</inlineHelpText>
    <label>Split Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>