sfdx-source/force-app/main/default/objects/SBQQ__Subscription__c/fields/Store_Account__c.field-meta.xml
<CustomField>
    <fullName>Store_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-14234: It stores the Store Account value from Quote Line with Twin Field functionality.</description>
    <label>Store Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscriptions(Store Account)</relationshipLabel>
    <relationshipName>Subscriptions1</relationshipName>
    <type>Lookup</type>
</CustomField>