sfdx-source/force-app/main/default/objects/SBQQ__Subscription__c/fields/Store_vs_Business_Level_Targeting__c.field-meta.xml
<CustomField>
    <fullName>Store_vs_Business_Level_Targeting__c</fullName>
    <description>LEM-468 – Attributes related to Promotion products</description>
    <label>Store vs. Business Level Targeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Store_vs_Business_Level_Targeting</valueSetName>
    </valueSet>
</CustomField>