sfdx-source/force-app/main/default/objects/SBQQ__Subscription__c/fields/Subscription_Rate_Change__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Rate_Change__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-6457-Active Rate Provisioning</description>
    <label>Subscription Rate Change</label>
    <referenceTo>Subscription_Rate_Change__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>SRC_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>