sfdx-source/force-app/main/default/objects/SBQQ__Subscription__c/fields/Target_Cx_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Cx_Audience__c</fullName>
    <description>LEM-468 – Attributes related to Promotion products</description>
    <label>Target Cx Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Target_Cx_Audience</valueSetName>
    </valueSet>
</CustomField>