sfdx-source/force-app/main/default/objects/SBQQ__Subscription__c/fields/Trial_Commission__c.field-meta.xml
<CustomField>
    <fullName>Trial_Commission__c</fullName>
    <description>LEM-468 – Attributes related to Promotion products</description>
    <label>Trial Commission</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>