sfdx-source/force-app/main/default/objects/SBQQ__Subscription__c/fields/Trial_Fee__c.field-meta.xml
<CustomField>
    <fullName>Trial_Fee__c</fullName>
    <label>Trial Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>