sfdx-source/force-app/main/default/objects/SBQQ__Subscription__c/fields/Trial_Marketing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Trial_Marketing_Rate__c</fullName>
    <description>LEM-13960: Magic Wand Attribute.</description>
    <label>Trial Marketing Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>