sfdx-source/force-app/main/default/objects/SBQQ__Subscription__c/fields/Trial_Period__c.field-meta.xml
<CustomField>
    <fullName>Trial_Period__c</fullName>
    <label>Trial Period (Days)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trial_Period</valueSetName>
    </valueSet>
</CustomField>