sfdx-source/force-app/main/default/objects/SBQQ__Subscription__c/fields/Trial_Period_Number__c.field-meta.xml
<CustomField>
    <fullName>Trial_Period_Number__c</fullName>
    <description>LEM-13986: It captures the value of trial period.</description>
    <label>Trial Period Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>