sfdx-source/force-app/main/default/objects/SBQQ__Subscription__c/fields/Trial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Start_Date__c</fullName>
    <description>LEM-184: Initial Setup of Subscription</description>
    <label>Trial Start Date</label>
    <type>Date</type>
</CustomField>