sfdx-source/force-app/main/default/objects/SBQQ__Subscription__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>LEM-1602: Create New Fields for Ads and Promos</description>
    <inlineHelpText>Email + Push (1M sends) → $15k Email Only (1M sends) → $10k Push Only (1M sends) → $7.5k  or Manual entry</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>