sfdx-source/force-app/main/default/objects/SBQQ__Subscription__c/fields/Upper_Deal_Desk_Commission_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Upper_Deal_Desk_Commission_Threshold__c</fullName>
    <description>LEM-13822: Sets an upper threshold for deal desk approvals.</description>
    <label>Upper Deal Desk Commission Threshold</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>