sfdx-source/force-app/main/default/objects/SBQQ__Subscription__c/fields/User_Manager_Fee_Threshold__c.field-meta.xml
<CustomField>
    <fullName>User_Manager_Fee_Threshold__c</fullName>
    <description>LEM-13812: Field added for mapping from CRT values used in calculation of fees/commission, and for use in product, price and approval rule.</description>
    <label>User Manager Fee Threshold</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>