sfdx-source/force-app/main/default/objects/SBQQ__Subscription__c/fields/What_are_the_KPIs_Mx_wants_to_achieve__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_KPIs_Mx_wants_to_achieve__c</fullName>
    <description>LEM-14633-DPEI Attributes to Opportunity Product, Order Product and Subscription objects</description>
    <inlineHelpText>What are the top metrics that are most important for the Mx when launching this item as a Dashpass exclusive: e.g. New customer acq, order frequency, etc. Please highlight what is most important</inlineHelpText>
    <label>What are the KPIs Mx wants to achieve?</label>
    <type>TextArea</type>
</CustomField>