sfdx-source/force-app/main/default/objects/SBQQ__Subscription__c/fields/Will_DD_subsidize_prop_22_fees__c.field-meta.xml
<CustomField>
    <fullName>Will_DD_subsidize_prop_22_fees__c</fullName>
    <description>LEM-1602: Create New Fields for Ads and Promos</description>
    <label>Will DD subsidize prop 22 fees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Will_DD_subsidize_prop_22_fees</valueSetName>
    </valueSet>
</CustomField>